# flutter_wgpu_texture

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
doc/: architecture.md  custom_scene.md  extending_rust_logic.md  platforms.md
doc/plans/: 2026-03-14-webgl-fallback-design.md  2026-03-14-webgl-fallback-plan.md
docs/: architecture.md  custom_scene.md  extending_rust_logic.md  platforms.md
docs/plans/: 2026-03-14-webgl-fallback-plan.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_wgpu_texture_example/: MainActivity.kt
example/custom_scene/macos/Runner.xcodeproj/: project.pbxproj
example/custom_scene/test/: widget_test.dart
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/particles/: README.md
example/particles/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/particles/macos/Runner/Configs/: AppInfo.xcconfig
example/particles/test/: widget_test.dart
example/shader_playground/test/: widget_test.dart
example/spinning_cube/: .metadata  README.md
example/spinning_cube/linux/runner/: my_application.cc
example/spinning_cube/test/: widget_test.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
examples/custom_scene/: README.md  pubspec.yaml
examples/custom_scene/hook/: build.dart
examples/custom_scene/lib/: main.dart
examples/custom_scene/macos/Flutter/: GeneratedPluginRegistrant.swift
examples/custom_scene/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
examples/custom_scene/macos/Runner/Configs/: AppInfo.xcconfig
examples/custom_scene/rust/: Cargo.toml  build.rs
examples/custom_scene/rust/gradient_scene/: Cargo.toml
examples/custom_scene/rust/gradient_scene/src/: lib.rs
examples/custom_scene/rust/src/: lib.rs
examples/custom_scene/test/: widget_test.dart
examples/particles/: README.md  pubspec.yaml
examples/particles/lib/: main.dart
examples/particles/linux/runner/: my_application.cc
examples/particles/macos/Runner.xcodeproj/: project.pbxproj
examples/particles/test/: widget_test.dart
examples/particles/windows/runner/: Runner.rc
examples/shader_playground/: README.md  pubspec.yaml
examples/shader_playground/lib/: main.dart
examples/shader_playground/test/: widget_test.dart
examples/shader_playground/windows/flutter/: generated_plugin_registrant.cc
examples/spinning_cube/: pubspec.yaml
examples/spinning_cube/macos/Runner.xcodeproj/: project.pbxproj
examples/spinning_cube/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
examples/spinning_cube/windows/: CMakeLists.txt
examples/spinning_cube/windows/flutter/: generated_plugins.cmake
examples/spinning_cube/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
ios/: flutter_wgpu_texture.podspec
lib/: flutter_wgpu_texture.dart
lib/src/: flutter_wgpu_texture_controller.dart  flutter_wgpu_texture_widget.dart  platform_channel.dart
lib/src/renderer/: flutter_wgpu_texture_backend.dart  flutter_wgpu_texture_backend_desktop.dart  flutter_wgpu_texture_backend_stub.dart  flutter_wgpu_texture_backend_web.dart
lib/src/renderer/web/: web_gl_renderer.dart  web_gpu_renderer.dart  web_renderer.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  rust_dylib.dart  rust_init.dart
lib/src/rust/api/: simple.dart
linux/: CMakeLists.txt  flutter_wgpu_texture_plugin.cc
linux/include/flutter_wgpu_texture/: flutter_wgpu_texture_plugin.h
macos/: flutter_wgpu_texture.podspec
macos/Classes/: FlutterWgpuTexturePlugin.swift
rust/: Cargo.toml  README.md  rust-toolchain.toml
rust/examples/: smoke_dmabuf.rs  smoke_lights.rs
rust/src/: bevy_app.rs  engine.rs  frb_generated.rs  lib.rs  linux_dma_buf.rs  present.rs  registry.rs  scene.rs
rust/src/api/: mod.rs
rust/src/engine/: device.rs  mod.rs  render_thread.rs
rust/src/gizmo/: drag.rs  draw.rs  hit.rs  mod.rs
rust/src/level/: components.rs  mod.rs  physics.rs  play.rs  primitives.rs  scene_file.rs  schema.rs  view_mode.rs
rust/src/light/: mod.rs
rust/src/picking/: mod.rs
rust/src/scenes/: cube.rs  mod.rs  particles.rs  shader_playground.rs
rust/src/viewport/: camera.rs  mod.rs
rust_core/: Cargo.toml  LICENSE  README.md
rust_core/src/: lib.rs  registry.rs  scene.rs
windows/: CMakeLists.txt  flutter_wgpu_texture_plugin.cpp
windows/include/flutter_wgpu_texture/: flutter_wgpu_texture_plugin.h
