[package]
name = "flutter_wgpu_texture"
version = "0.2.0"
edition = "2021"
description = "Flutter texture plugin runtime powered by Rust and wgpu."
license = "MIT"
repository = "https://github.com/flowsai/flutter_wgpu_texture"
homepage = "https://github.com/flowsai/flutter_wgpu_texture"
keywords = ["flutter", "wgpu", "gpu", "texture"]
categories = ["graphics", "rendering"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_wgpu_texture_core = { version = "0.2.0", path = "../rust_core" }
flutter_rust_bridge = "=2.11.1"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.27"
log = "0.4"
ctor = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu-hal = { version = "0.19.5", features = ["metal"] }
metal = "0.27.0"

[target.'cfg(target_os = "windows")'.dependencies]
wgpu-hal = { version = "0.19.5", features = ["dx12"] }
d3d12 = { version = "0.19.0", features = ["libloading"] }
winapi = { version = "0.3", features = ["d3d12", "dxgiformat", "dxgitype", "handleapi", "winnt"] }

[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.37.3"
wgpu-hal = { version = "0.19.5", features = ["vulkan"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
