[package]
name = "flutter_wgpu_texture"
version = "0.2.1"
edition = "2021"
description = "Flutter texture plugin runtime powered by Rust and wgpu."
license = "MIT"
repository = "https://github.com/flowsai/flutter_wgpu_texture"
homepage = "https://github.com/flowsai/flutter_wgpu_texture"
documentation = "https://docs.rs/flutter_wgpu_texture"
readme = "README.md"
keywords = ["flutter", "wgpu", "gpu", "texture"]
categories = ["graphics", "rendering"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
# Match Bevy 0.19-dev exactly so the whole graph resolves to a single wgpu.
wgpu = "=29.0.3"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.27"
log = "0.4"
ctor = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = { version = "0.12", default-features = false }

# Bevy is the renderer. default-features=false to stay headless (no winit window);
# raw_vulkan_init lets us enable the DMA-BUF Vulkan device extensions at creation.
bevy = { path = "../../../bevy", default-features = false, features = [
  "std",            # block_on device init + threading
  "bevy_log",       # surface render init errors during bring-up
  "bevy_render",
  "bevy_core_pipeline",
  "tonemapping_luts",   # default Camera3d tonemapper (TonyMcMapFace) needs this
  "zstd_rust",          # tonemapping_luts LUTs are KTX2+zstd; pure-Rust backend
  "area_light_luts",    # RectLight area-light LUTs (KTX2+zstd), same asset pattern
  "bevy_pbr",
  "bevy_asset",
  "raw_vulkan_init",
  "bevy_picking",        # base picking types
  "mesh_picking",        # MeshRayCast SystemParam for viewport click-to-pick
  "bevy_gizmos",         # immediate-mode gizmo drawing (selection + transform handles)
  "bevy_gizmos_render",  # gizmo render pipeline into the offscreen Image camera
  "bevy_world_serialization",
  "serialize",
] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu-hal = { version = "=29.0.3", features = ["metal"] }
metal = "0.27.0"

[target.'cfg(target_os = "windows")'.dependencies]
wgpu-hal = { version = "=29.0.3", features = ["dx12"] }
d3d12 = { version = "0.19.0", features = ["libloading"] }
winapi = { version = "0.3", features = ["d3d12", "dxgiformat", "dxgitype", "handleapi", "winnt"] }

[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38"
wgpu-hal = { version = "=29.0.3", features = ["vulkan"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
