[package]
name = "flutter_wgpu_texture"
version = "0.2.1"
edition = "2021"
description = "Flutter texture plugin runtime powered by Rust and wgpu."
license = "MIT"
repository = "https://github.com/flowsai/flutter_wgpu_texture"
homepage = "https://github.com/flowsai/flutter_wgpu_texture"
documentation = "https://docs.rs/flutter_wgpu_texture"
readme = "README.md"
keywords = ["flutter", "wgpu", "gpu", "texture"]
categories = ["graphics", "rendering"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
# Match Bevy 0.19-dev exactly so the whole graph resolves to a single wgpu.
wgpu = "=29.0.3"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.27"
log = "0.4"
ctor = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = { version = "0.12", default-features = false }

# Bevy is the renderer. default-features=false to stay headless (no winit window);
# raw_vulkan_init lets us enable the DMA-BUF Vulkan device extensions at creation.
bevy = { path = "../../../bevy", default-features = false, features = [
  "std",            # block_on device init + threading
  "bevy_log",       # surface render init errors during bring-up
  "bevy_render",
  "bevy_core_pipeline",
  "tonemapping_luts",   # default Camera3d tonemapper (TonyMcMapFace) needs this
  "zstd_rust",          # tonemapping_luts LUTs are KTX2+zstd; pure-Rust backend
  "area_light_luts",    # RectLight area-light LUTs (KTX2+zstd), same asset pattern
  "bevy_pbr",
  "bevy_asset",
  "bevy_picking",        # base picking types
  "mesh_picking",        # MeshRayCast SystemParam for viewport click-to-pick
  "bevy_gizmos",         # immediate-mode gizmo drawing (selection + transform handles)
  "bevy_gizmos_render",  # gizmo render pipeline into the offscreen Image camera
  "bevy_world_serialization",
  "serialize",
] }

# Physics. Pinned to the local avian fork ported to Bevy 0.19; the patch table
# below redirects avian's Bevy crates (and its helper crates) to the same local
# Bevy this crate builds against, so the whole graph resolves to one Bevy.
avian3d = { path = "../../../avian/crates/avian3d", default-features = false, features = [
  "3d",
  "f32",
  "parry-f32",
  "default-collider",
] }

[patch.crates-io]
bevy = { path = "../../../bevy" }
bevy_math = { path = "../../../bevy/crates/bevy_math" }
bevy_reflect = { path = "../../../bevy/crates/bevy_reflect" }

[patch."https://github.com/avianphysics/bevy_heavy"]
bevy_heavy = { path = "../../../bevy_heavy" }

[patch."https://github.com/Jondolf/bevy_transform_interpolation"]
bevy_transform_interpolation = { path = "../../../bevy_transform_interpolation" }

[patch."https://github.com/Jondolf/glam_matrix_extras"]
glam_matrix_extras = { path = "../../../glam_matrix_extras" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu-hal = { version = "=29.0.3", features = ["metal"] }
# wgpu-hal 29 exposes its Metal interop via objc2; match its exact objc2 /
# objc2-metal versions so MTLTexture / MTLTextureType types are identical.
objc2 = "0.6"
objc2-metal = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
wgpu-hal = { version = "=29.0.3", features = ["dx12"] }
d3d12 = { version = "0.19.0", features = ["libloading"] }
winapi = { version = "0.3", features = ["d3d12", "dxgiformat", "dxgitype", "handleapi", "winnt"] }

[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38"
wgpu-hal = { version = "=29.0.3", features = ["vulkan"] }
# raw_vulkan_init pulls in bevy_render's Vulkan-only code (DMA-BUF device init),
# which requires the wgpu-hal `vulkan` backend enabled just above. Linux-only;
# macOS/iOS/Windows use Metal/DX12 and must not compile this path.
bevy = { path = "../../../bevy", default-features = false, features = [
  "raw_vulkan_init",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
