[package]
name = "flutter_wgpu_texture_core"
version = "0.2.1"
edition = "2021"
description = "Core trait and scene registry for flutter_wgpu_texture"
license = "MIT"
repository = "https://github.com/flowsai/flutter_wgpu_texture"
homepage = "https://github.com/flowsai/flutter_wgpu_texture"
documentation = "https://docs.rs/flutter_wgpu_texture_core"
readme = "README.md"
keywords = ["flutter", "wgpu", "gpu", "scene"]
categories = ["graphics", "rendering"]

[dependencies]
wgpu = "0.19"
ctor = "0.2"
